--- a/.testr.conf
+++ b/.testr.conf
@@ -4,3 +4,4 @@ test_command=STDOUT_CAPTURE=${STDOUT_CAPTURE:-1} \
              ${PYTHON:-python} -m subunit.run discover -t ./ eowyn/tests $LISTOPT $IDOPTION
 test_id_option=--load-list $IDFILE
 test_list_option=--list
+group_regex=([^\.]*\.)*
